# hnh

./: pyproject.toml
src/hnh/: main.py  utils.py
tests/: test_max_p.py
